Try to stop footer from overlapping

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -92,8 +92,7 @@ a {
 .main {
   display: flex;
   flex-flow: row nowrap;
-  margin: 20px auto;
-  height: 90vh;
+  margin: 20px auto 40px;
 }
 
 .turing-logo {
@@ -104,7 +103,7 @@ a {
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   width: 25%;
-  height: 40%;
+  height: 40vh;
   margin: 30px auto;
   text-align: center;
 }
